tooling/nargo_cli/tests/snapshots/execution_success/bool_or/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: bool, y: bool) {
    assert(x | y);
    assert((x | y) | x);
}
