tooling/nargo_cli/tests/snapshots/execution_success/bool_or/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62QXQqAMAiAszqQTm361lUarfsfoaIGYw+9tA/EP/hAYXiAK6amhqqvZ9DsbtY3My4iOYZMTBsGT6YomhYjIzXdgzFnE4uePKKTcKZDnQ98KM6x8eI/qKcLOt57u+bXVW6u//rFCcsMZwO8AQAA",
  "debug_symbols": "nZDBCoMwDIbfJecexM2LrzKG1BqlENIS28EQ331RFPWwi6c0+fv9If8EHbZ5aDz3YYT6NUErnsgPDQVnkw+s02k2sLdNEkQdwUlXKlpBTlBzJjLwsZTXT2O0vNZkRdXCAHKnVQ17T7i8ZnPQxX/0UW3s84CrG3R1od/aWeflci2UUJfzYibetoRbAn1mdwokfeOu7JFFCQ67LLjYrZou+AE=",
  "file_map": {
    "50": {
      "source": "fn main(x: u1, y: u1) {\n    assert(x | y == 1);\n\n    assert(x | y | x == 1);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
