tooling/nargo_cli/tests/snapshots/execution_success/bool_or/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 1
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62QXQqAMAiAszqQTm361lUarfsfoaIGYw+9tA/EP/hAYXiAK6amhqqvZ9DsbtY3My4iOYZMTBsGT6YomhYjIzXdgzFnE4uePKKTcKZDnQ98KM6x8eI/qKcLOt57u+bXVW6u//rFCcsMZwO8AQAA",
  "debug_symbols": "TYzLCsMgEEX/ZdZZlLZu/JVSgo8xDMgooxaK5N9jQgJZnnu4p4NH25aZOKQC+tMhJmcqJR7U4XlMJRveqVQjFfRLTYDsQb/VOkGgiKDVY/0OsEIx0jLfI2P+GSFjI54YGrubrf98meufJTn0TXAvHW7kNw==",
  "file_map": {
    "50": {
      "source": "fn main(x: u1, y: u1) {\n    assert(x | y == 1);\n\n    assert(x | y | x == 1);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
